Change map link to our service

--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@
                 <div class="card-body">
                   <div id="map" style="width:100%;height:600px;"></div>
 
-                  <a class="btn btn-primary" style="width:100%; margin:0.3rem;" href="https://m.map.kakao.com/actions/searchView?q=%EC%84%A0%EB%B3%84%EC%A7%84%EB%A3%8C%EC%86%8C%20%EC%A0%9C%EC%A3%BC&wxEnc=LVSOTP&wyEnc=QNLTTMN&lvl=4&fbclid=IwAR0GcU5v4DY3GGkgbrDINlXiHccJzGALItiy1-JUqh7CVecjqKMXbjThqJY" role="button">카카오맵 연동</a>
+                  <a class="btn btn-primary" style="width:100%; margin:0.3rem;" href="https://jeju.livecorona.co.kr" role="button">자세한 지도 확인</a>
 
                   <a class="btn btn-primary" style="width:100%; margin:0.3rem;" href="https://www.notion.so/381a1f09e420476c839cdbe543dbb3bb" role="button">맵 크게보기</a>
 
