--- a/index_layout.html
+++ b/index_layout.html
@@ -390,7 +390,7 @@
                 <!-- Card Body -->
                 <div class="card-body">
                   <div id="koreaMap" style="width:100%;height:446px;"></div>
-                  <div class="update mt-2"><span class="title">업데이트</span><span class="desc">2/26 17:00</span></div>
+                  <div class="update mt-2"><span class="title">업데이트</span><span class="desc">2/28 10:00</span></div>
                   <div class="source mt-2"><span class="title">출처</span><span class="desc">중앙방역대책본부, KBS(특정 시점 지자체별 집계와 다를 수 있음)</span></div>
                 </div>
               </div>
@@ -711,6 +711,9 @@
                               </ul>
                               <div class="source"><span class="title">출처</span><span class="desc"><a href="http://www.jeju.go.kr/wel/healthCare/corona/coronaNotice.htm?act=view&seq=1233486">제주특별자치도</a><br>
                                 * 해당 양성반응자는 2월 22일 확진 판정</span></div>
+                              <a href="http://www.jeju.go.kr/wel/healthCare/corona/coronaNotice.htm?page=1&act=view&seq=1234112">
+                                <img src="news/news00.jpg" class="img-fluid" alt="">
+                              </a>
                             </div>
                           </div>
                         </div>
@@ -804,6 +807,7 @@
                   <div id="map" style="width:100%;height:452px;"></div>
                   <a href="https://m.map.kakao.com/actions/searchView?q=%EC%84%A0%EB%B3%84%EC%A7%84%EB%A3%8C%EC%86%8C%20%EC%A0%9C%EC%A3%BC&wxEnc=LVSOTP&wyEnc=QNLTTMN&lvl=4&fbclid=IwAR0GcU5v4DY3GGkgbrDINlXiHccJzGALItiy1-JUqh7CVecjqKMXbjThqJY">신종코로나바이러스 제주지역 선별진료소(카카오맵 연동)</a>
                   <p style="margin-top:1rem">
+                    <button type="button" class="btn btn-primary" data-toggle="modal" onclick="location.href='https://jeju.livecorona.co.kr'">자세한 지도 확인</button>
                     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#jejuHealthCenter">제주 보건지소현황</button>
                     <!-- Modal -->
                     <div class="modal fade" id="jejuHealthCenter" tabindex="-1" role="dialog" aria-labelledby="jejuHealthCenterLabel" aria-hidden="true">
