제주도 신천지 교인 음성판정 내용 수정

--- a/index.html
+++ b/index.html
@@ -711,9 +711,6 @@
                               </ul>
                               <div class="source"><span class="title">출처</span><span class="desc"><a href="http://www.jeju.go.kr/wel/healthCare/corona/coronaNotice.htm?act=view&seq=1233486">제주특별자치도</a><br>
                                 * 해당 양성반응자는 2월 22일 확진 판정</span></div>
-                              <a href="http://www.jeju.go.kr/wel/healthCare/corona/coronaNotice.htm?page=1&act=view&seq=1234112">
-                                <img src="news/news00.jpg" class="img-fluid" alt="">
-                              </a>
                             </div>
                           </div>
                         </div>
@@ -721,7 +718,6 @@
                           <div class="card-header" id="headingThree">
                             <h2 class="mb-0 cases-title">
                               <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
-      
                                 이스라엘 성시순례 다녀온 도민 확인, 모니터링 착수
                               </button>
                             </h2>
@@ -750,6 +746,11 @@
                             </div>
                           </div>
                         </div>
+                      </div>
+                      <div class="mt-3">
+                        <a href="http://www.jeju.go.kr/wel/healthCare/corona/coronaNotice.htm?page=1&act=view&seq=1234112">
+                          <img src="news/news00.jpg" class="img-fluid" alt="">
+                        </a>
                       </div>
                     </div>
                   </div>
