--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
               <a target="_blank" rel="noopener noreferrer" href="https://www.notion.so/fc332cf039fd4f61b38a80bc2fc8acb9">업데이트 히스토리</a>
             </p>
             <!-- Closed -->
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close" id="btnAlertBannerClose">
               <span aria-hidden="true">&times;</span>
             </button>
             <!-- //Closed -->
@@ -1421,7 +1421,7 @@
 
   <!-- A 태그 #앵커 부드러운 이동 -->
   <script>
-    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+    document.querySelectorAll('a[href^="#"]').forEach(function(anchor) {
       anchor.addEventListener('click', function (e) {
           e.preventDefault();
           document.querySelector(this.getAttribute('href')).scrollIntoView({
@@ -1437,6 +1437,8 @@
       window.location.reload();
     }, 5 * (1000 * 60));
   </script>
+
+
 </body>
 
 </html>
