--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       <div id="content" class="content">
         <!-- Alert -->
         <div id="wrapper">
-          <div class="alert alert-warning alert-dismissible fade show container-fluid" role="alert">
+          <div class="alert alert-warning alert-dismissible fade show container-fluid d-none" role="alert" id="alertBanner">
             <ul>
               <li>
                 <a href="http://www.cdc.go.kr/linkCheck.es?mid=a21111050500" target="_blank">질병관리본부</a>,
@@ -1437,8 +1437,39 @@
       window.location.reload();
     }, 5 * (1000 * 60));
   </script>
+ 
+  <!-- 배너 닫기 저장-->
+  <script>
+    function getCookie(name) {
+      name = name + "=";
+      var decodedCookie = decodeURIComponent(document.cookie);
+      var ca = decodedCookie.split(';');
+      for(var i = 0; i < ca.length; i++) {
+        var c = ca[i];
+        while (c.charAt(0) == ' ') {
+          c = c.substring(1);
+        }
+        if (c.indexOf(name) == 0) {
+          return c.substring(name.length, c.length);
+        }
+      }
+      return "";
+    }
 
+    function setCookie(name, value, expiryDays) {
+      var d = new Date();
+      d.setTime(d.getTime() + (expiryDays * 24 * 60 * 60 * 1000));
+      var expires = "expires=" + d.toUTCString();
+      document.cookie = name + "=" + value + ";" + expires + ";path=/";
+    }
+    
+    $("#btnAlertBannerClose").click(function() {
+      setCookie("alertBanner", "closed", 30);
+    });
 
+    if (getCookie("alertBanner") !== "closed")
+      $("#alertBanner").removeClass("d-none");
+  </script>
 </body>
 
 </html>
