--- a/index.html
+++ b/index.html
@@ -119,7 +119,11 @@
         <!-- Alert -->
         <div id="wrapper">
           <div class="alert alert-warning alert-dismissible fade show container-fluid d-none" role="alert" id="alertBanner">
+            <br>
             <ul>
+              <li>
+                라이브코로나는 <strong>크롬(Chrome)</strong>에 최적화 되어 있습니다.
+              </li>
               <li>
                 <a href="http://www.cdc.go.kr/linkCheck.es?mid=a21111050500" target="_blank">질병관리본부</a>,
                 <a href="http://news.kbs.co.kr/common/main.html" target="_blank">KBS</a>, 및 <a href="http://www.jeju.go.kr/wel/healthCare/corona/coronaNotice.htm">제주도청</a>의 데이터를 근거하여 매일 업데이트합니다.
@@ -1453,7 +1457,7 @@
       window.location.reload();
     }, 5 * (1000 * 60));
   </script>
- 
+
   <!-- 배너 닫기 저장-->
   <script>
     function getCookie(name) {
@@ -1478,7 +1482,7 @@
       var expires = "expires=" + d.toUTCString();
       document.cookie = name + "=" + value + ";" + expires + ";path=/";
     }
-    
+
     $("#btnAlertBannerClose").click(function() {
       setCookie("alertBanner", "closed", 30);
     });
