--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta property="og:type" content="website">
-  <meta property="og:title" content="코로나 바이러스 현황판">
-  <meta name="description" content="질병관리본부의 데이터에 근거하여 신종 코로나 바이러스 감염증에 대한 정보, 안내 및 확산 지도를 신속하게 전달합니다.">
+  <meta property="og:title" content="코로나19 바이러스 현황판">
+  <meta name="description" content="질병관리본부의 데이터에 근거하여 코로나19 바이러스 감염증에 대한 정보, 안내 및 확산 지도를 신속하게 전달합니다.">
   <meta name="keywords" content="코로나19, 코로나바이러스, 코로나, 코로나맵, 코로나지도, 코로나 지도, 코로나 현황판, 확진자" />
-  <meta property="og:description" content="코로나 바이러스 현황판">
+  <meta property="og:description" content="코로나19 바이러스 현황판">
   <meta property="og:image" content="https://livecorona.co.kr/img/livecorona.jpg">
   <meta property="og:url" content="https://livecorona.co.kr">
 
@@ -16,7 +16,7 @@
   <meta name="author" content="LIVECoD">
   <link rel="shortcut icon" href="#">
 
-  <title>코로나 맵</title>
+  <title>코로나19 맵</title>
   <link rel='icon' href='img/favicon.png' type='image/x-icon'>
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/innks/NanumSquareRound@master/nanumsquareround.min.css">
   <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=26ba2oaskk"></script>
@@ -87,7 +87,7 @@
                   <a href="#jejuCasesStatus"><i class="fas fa-caret-right"></i> 제주도 현황</a>
                 </li>
                 <li class="nav-item">
-                  <a href="#KBSCasesRealtime"><i class="fas fa-caret-right"></i> KBS 신종 코로나바이러스감염증 현황(실시간)</a>
+                  <a href="#KBSCasesRealtime"><i class="fas fa-caret-right"></i> KBS 코로나19 바이러스감염증 현황(실시간)</a>
                 </li>
               </ul>
             </div>
@@ -109,7 +109,7 @@
             <a href="#jejuCasesStatus"><i class="fas fa-caret-right"></i> 제주도 현황</a>
           </li>
           <li>
-            <a href="#KBSCasesRealtime"><i class="fas fa-caret-right"></i> KBS 신종 코로나바이러스감염증 현황(실시간)</a>
+            <a href="#KBSCasesRealtime"><i class="fas fa-caret-right"></i> KBS 코로나19 바이러스감염증 현황(실시간)</a>
           </li>
         </ul>
       </div>
@@ -455,11 +455,11 @@
                   </ol>
                   <ul>
                     <li><a href="http://www.cdc.go.kr/contents.es?mid=a21111060000">질병관리본부 안전수칙</a></li>
-                    <li><a href="https://www.cdc.go.kr/linkCheck.es?mid=a21111050600">신종코로나바이러스 선별진료소</a></li>
+                    <li><a href="https://www.cdc.go.kr/linkCheck.es?mid=a21111050600">코로나19 바이러스 선별진료소</a></li>
                   </ul>
                   <a class="btn btn-primary" style="width:100%;margin-bottom:1rem;" href="https://www.notion.so/a80c76132f8b4a63a6f4901b1320bf62"
                     role="button">자기동선기록 가이드</a>
-                  <a class="btn btn-primary" style="width:100%;margin-bottom:1rem;" href="https://news.naver.com/main/factcheck/main.nhn" role="button">신종코로나바이러스 관련 팩트체크</a>
+                  <a class="btn btn-primary" style="width:100%;margin-bottom:1rem;" href="https://news.naver.com/main/factcheck/main.nhn" role="button">코로나19 바이러스 관련 팩트체크</a>
                   <a class="btn btn-primary" style="width:100%" href="https://www.notion.so/381a1f09e420476c839cdbe543dbb3bb" role="button">소상공인 지원사업</a>
                 </div>
               </div>
@@ -479,7 +479,7 @@
                         </a>
                         <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink">
                           <div class="dropdown-header">상세</div>
-                          <a class="dropdown-item" href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019/situation-reports/">WHO 신종코로나
+                          <a class="dropdown-item" href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019/situation-reports/">WHO 코로나19
                           </a>
                           <a class="dropdown-item" href="https://www.who.int/csr/don/archive/disease/severe_acute_respiratory_syndrome/en/">WHO SARS
                           </a>
@@ -509,7 +509,7 @@
                               <th>신종인플루엔자 A(H1N1)</th>
                               <th>중동호흡기 중후군(MERS)</th>
                               <th>중증급성호흡기증후군(SARS)</th>
-                              <th>신종 코로나(COVID-19)</th>
+                              <th>코로나19(COVID-19)</th>
                             </tr>
                           </thead>
                           <tbody>
@@ -824,9 +824,13 @@
                 <!-- Card Body -->
                 <!-- Card Body -->
                 <div class="card-body">
-                  마커를 클릭하면 자세한 진료소의 정보를 확인할 수 있습니다.
                   <div id="map" style="width:100%;height:452px;"></div>
-                  <a href="https://m.map.kakao.com/actions/searchView?q=%EC%84%A0%EB%B3%84%EC%A7%84%EB%A3%8C%EC%86%8C%20%EC%A0%9C%EC%A3%BC&wxEnc=LVSOTP&wyEnc=QNLTTMN&lvl=4&fbclid=IwAR0GcU5v4DY3GGkgbrDINlXiHccJzGALItiy1-JUqh7CVecjqKMXbjThqJY">신종코로나바이러스 제주지역 선별진료소(카카오맵 연동)</a>
+                  <a href="https://m.map.kakao.com/actions/searchView?q=%EC%84%A0%EB%B3%84%EC%A7%84%EB%A3%8C%EC%86%8C%20%EC%A0%9C%EC%A3%BC&wxEnc=LVSOTP&wyEnc=QNLTTMN&lvl=4&fbclid=IwAR0GcU5v4DY3GGkgbrDINlXiHccJzGALItiy1-JUqh7CVecjqKMXbjThqJY">코로나19 바이러스 제주지역 선별진료소(카카오맵 연동)</a>
+                  <ul>
+                    <li><strong>보건소</strong> : 검체체취 및 선별진료소 이동여부 결정</li>
+                    <li><strong>선별진료소</strong> : 코로나19 검사</li>
+                    <li><strong>국민안심병원</strong> : 호흡기 환자의 병원 방문부터 입원까지 전 진료 과정을 나머지 환자들과 분리해 진료하는 의료기관, 코로나19에 대한 국민 불안을 줄이고, 비호흡기 환자들이 코로나19 감염에 대한 걱정 없이 진료를 받을 수 있도록 마련</li>
+                  </ul>
                   <p style="margin-top:1rem">
                     <button type="button" class="btn btn-primary" data-toggle="modal" onclick="location.href='https://jeju.livecorona.co.kr'">자세한 지도 확인</button>
                     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#jejuHealthCenter">제주 보건지소현황</button>
@@ -1288,7 +1292,7 @@
               <div class="card shadow mb-4">
                 <!-- Card Header - Dropdown -->
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                  <h6 class="m-0 font-weight-bold text-danger">KBS 신종코로나바이러스감염증 현황(실시간)</h6>
+                  <h6 class="m-0 font-weight-bold text-danger">KBS 코로나19 바이러스감염증 현황(실시간)</h6>
                   <div class="dropdown no-arrow">
                     <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
