--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
                     </div>
                     <!-- Card Body -->
                     <div class="card-body">
-                      <img src="img/lancet.jpg" alt="Nowcasting and forecasting the potential domestic and international spread of the 2019-nCoV outbreak originating            in Wuhan, China: a modelling study" class="img-fluid">
+                      <img src="img/lancet.jpg" alt="Nowcasting and forecasting the potential domestic and international spread of the 2019-nCoV outbreak originating in Wuhan, China: a modelling study" class="img-fluid">
                       <p style="margin-top:0.5rem;">
                           ※ 1월 25일까지의 감염력이 유지된다는 전제 하 그래프 입니다. 이를 바탕으로 다양한 시나리오별 예측값을 시각화할 예정이며, 차후 비슷한 사례가 발생되었을 경우에도 사용할 수 있도록
                         모든 소스를 오픈하도록 하겠습니다.
@@ -596,6 +596,31 @@
                   </div>
                 </div>
                 <!-- //시나리오별 상황예측 -->
+
+                <!-- 한국 확진자 추이 분석 -->
+                <div class="col-xl-12 col-lg-6">
+                  <div class="card shadow mb-4">
+                    <!-- Card Header - Dropdown -->
+                    <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                      <h6 class="m-0 font-weight-bold text-danger">한국 확진자 추이 그래프</h6>
+                      <div class="dropdown no-arrow">
+                        <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink">
+                          <div class="dropdown-header">상세</div>
+                          <a class="dropdown-item" href="https://ko.wikipedia.org/wiki/%EB%8C%80%ED%95%9C%EB%AF%BC%EA%B5%AD%EC%9D%98_%EC%BD%94%EB%A1%9C%EB%82%98%EB%B0%94%EC%9D%B4%EB%9F%AC%EC%8A%A4%EA%B0%90%EC%97%BC%EC%A6%9D-19_%EC%9C%A0%ED%96%89">일별 데이터 상세보기
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- Card Body -->
+                    <div style="height:25rem;" class="card-body">
+                      <canvas id="myAreaChart_four"></canvas>
+                    </div>
+                  </div>
+                </div>
+                <!-- //한국 확진자 추이 분석 -->
               </div>
             </div>
           </div>
