--- a/index.html
+++ b/index.html
@@ -242,6 +242,7 @@
               </div>
             </div>
             <!-- //상세현황 -->
+
             <!-- 제주현황 -->
             <div class="col-xl-4 col-lg-12 status-now">
               <div class="card shadow mb-4">
@@ -271,12 +272,38 @@
           </div>
 
           <div class="row">
-            <!-- 확진자수 증가추이 -->
+
+            <!-- 한국 확진자 추이 분석 -->
             <div class="col-xl-6 col-lg-12">
               <div class="card shadow mb-4">
                 <!-- Card Header - Dropdown -->
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                  <h6 class="m-0 font-weight-bold text-danger">확진자수 증가추이</h6>
+                  <h6 class="m-0 font-weight-bold text-danger">한국 확진자수 증가추이</h6>
+                  <div class="dropdown no-arrow">
+                    <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink">
+                      <div class="dropdown-header">상세</div>
+                      <a class="dropdown-item" href="https://ko.wikipedia.org/wiki/%EB%8C%80%ED%95%9C%EB%AF%BC%EA%B5%AD%EC%9D%98_%EC%BD%94%EB%A1%9C%EB%82%98%EB%B0%94%EC%9D%B4%EB%9F%AC%EC%8A%A4%EA%B0%90%EC%97%BC%EC%A6%9D-19_%EC%9C%A0%ED%96%89">일별 데이터 상세보기
+                      </a>
+                    </div>
+                  </div>
+                </div>
+                <!-- Card Body -->
+                <div style="height:38.2rem;" class="card-body">
+                  <canvas id="myAreaChart_four"></canvas>
+                </div>
+              </div>
+            </div>
+            <!-- //한국 확진자 추이 분석 -->
+
+            <!-- 국내 확진자 누적 현황 -->
+            <div class="col-xl-6 col-lg-12">
+              <div class="card shadow mb-4 height-2">
+                <!-- Card Header - Dropdown -->
+                <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                  <h6 class="m-0 font-weight-bold text-danger">국내 확진자 누적 현황(중앙방역대책본부, KBS)</h6>
                   <div class="dropdown no-arrow">
                     <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
@@ -289,6 +316,36 @@
                 </div>
                 <!-- Card Body -->
                 <div class="card-body">
+                  <div id="koreaMap" style="width:100%;height:446px;"></div>
+                  <div class="update mt-2"><span class="title">업데이트</span><span class="desc">2/28 17:00</span></div>
+                  <div class="source mt-2"><span class="title">출처</span><span class="desc">중앙방역대책본부, KBS(특정 시점 지자체별 집계와 다를 수 있음)</span></div>
+                </div>
+              </div>
+            </div>
+            <!-- //국내 확진자 누적 현황 -->
+
+          </div>
+
+          <div class="row">
+
+            <!-- 확진자수 증가추이 -->
+            <div class="col-xl-5 col-lg-12">
+              <div class="card shadow mb-4">
+                <!-- Card Header - Dropdown -->
+                <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                  <h6 class="m-0 font-weight-bold text-danger">전세계 확진자수 증가추이</h6>
+                  <div class="dropdown no-arrow">
+                    <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink">
+                      <div class="dropdown-header">상세</div>
+                      <a class="dropdown-item" href="http://www.xn--now-po7lf48dlsm0ya109f.kr/infect/occurrence_list.do">상세내용</a>
+                    </div>
+                  </div>
+                </div>
+                <!-- Card Body -->
+                <div style="height:22.9rem;" class="card-body">
                   <div class="chart-area">
                     <canvas id="myAreaChart"></canvas>
                   </div>
@@ -296,6 +353,31 @@
               </div>
             </div>
             <!-- //확진자수 증가추이 -->
+
+            <!-- 세계 발병지도 -->
+            <div class="col-xl-4 col-lg-12">
+              <div class="card shadow mb-4 height-2">
+                <!-- Card Header - Dropdown -->
+                <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                  <h6 class="m-0 font-weight-bold text-danger">국가별 발병 세계 지도 (클릭시 상세정보)</h6>
+                  <div class="dropdown no-arrow">
+                    <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink">
+                      <div class="dropdown-header">상세</div>
+                      <a class="dropdown-item" href="http://www.xn--now-po7lf48dlsm0ya109f.kr/infect/occurrence_list.do">상세내용</a>
+                    </div>
+                  </div>
+                </div>
+                <!-- Card Body -->
+                <div class="card-body world-map">
+                  <object data="img/world.svg" type="image/svg+xml" id="objWorldmap"></object>
+                </div>
+              </div>
+            </div>
+            <!-- //세계 발병지도 -->
+
             <!-- Top5 발생국가 -->
             <div class="col-xl-3 col-lg-12">
               <div class="card shadow mb-4">
@@ -313,7 +395,7 @@
                   </div>
                 </div>
                 <!-- Card Body -->
-                <div class="card-body" id="Top5">
+                <div style="height:22.9rem;" class="card-body" id="Top5">
                   <h4 class="small font-weight-bold">
                     <span class="float-right"></span>
                   </h4>
@@ -348,80 +430,7 @@
               </div>
             </div>
             <!-- //Top5 발생국가 -->
-            <!-- 중국관광객 제주 입도 현황(2월 4일 무사증 중단) -->
-            <div class="col-xl-3 col-lg-12">
-              <div class="card shadow mb-4">
-                <!-- Card Header - Dropdown -->
-                <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                  <h6 class="m-0 font-weight-bold text-danger">중국관광객 제주 입도 현황(2월 4일 무사증 중단)</h6>
-                  <div class="dropdown no-arrow">
-                    <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink">
-                      <div class="dropdown-header">상세</div>
-                      <a class="dropdown-item" href="http://www.cdc.go.kr/contents.es?mid=a21111060000">상세내용</a>
-                    </div>
-                  </div>
-                </div>
-                <!-- Card Body -->
-                <div class="card-body">
-                  <div class="chart-area">
-                    <canvas id="myAreaChart_two"></canvas>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <!-- //중국관광객 제주 입도 현황(2월 4일 무사증 중단) -->
-          </div>
 
-          <div class="row">
-            <!-- 국내 확진자 누적 현황 -->
-            <div class="col-xl-6 col-lg-12">
-              <div class="card shadow mb-4 height-2">
-                <!-- Card Header - Dropdown -->
-                <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                  <h6 class="m-0 font-weight-bold text-danger">국내 확진자 누적 현황(중앙방역대책본부, KBS)</h6>
-                  <div class="dropdown no-arrow">
-                    <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink">
-                      <div class="dropdown-header">상세</div>
-                      <a class="dropdown-item" href="http://www.xn--now-po7lf48dlsm0ya109f.kr/infect/occurrence_list.do">상세내용</a>
-                    </div>
-                  </div>
-                </div>
-                <!-- Card Body -->
-                <div class="card-body">
-                  <div id="koreaMap" style="width:100%;height:446px;"></div>
-                  <div class="update mt-2"><span class="title">업데이트</span><span class="desc">2/28 17:00</span></div>
-                  <div class="source mt-2"><span class="title">출처</span><span class="desc">중앙방역대책본부, KBS(특정 시점 지자체별 집계와 다를 수 있음)</span></div>
-                </div>
-              </div>
-            </div>
-            <!-- 세계 발병지도 -->
-            <div class="col-xl-6 col-lg-12">
-              <div class="card shadow mb-4 height-2">
-                <!-- Card Header - Dropdown -->
-                <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                  <h6 class="m-0 font-weight-bold text-danger">국가별 발병 세계 지도 (클릭시 상세정보)</h6>
-                  <div class="dropdown no-arrow">
-                    <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink">
-                      <div class="dropdown-header">상세</div>
-                      <a class="dropdown-item" href="http://www.xn--now-po7lf48dlsm0ya109f.kr/infect/occurrence_list.do">상세내용</a>
-                    </div>
-                  </div>
-                </div>
-                <!-- Card Body -->
-                <div class="card-body world-map">
-                  <object data="img/world.svg" type="image/svg+xml" id="objWorldmap"></object>
-                </div>
-              </div>
-            </div>
           </div>
 
           <div class="anchor" id="safetyRule"></div>
@@ -469,31 +478,6 @@
 
             <div class="col-xl-8 col-lg-12">
               <div class="row">
-
-                <!-- 한국 확진자 추이 분석 -->
-                <div class="col-xl-12 col-lg-6">
-                  <div class="card shadow mb-4">
-                    <!-- Card Header - Dropdown -->
-                    <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                      <h6 class="m-0 font-weight-bold text-danger">한국 확진자 추이 그래프</h6>
-                      <div class="dropdown no-arrow">
-                        <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
-                        </a>
-                        <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink">
-                          <div class="dropdown-header">상세</div>
-                          <a class="dropdown-item" href="https://ko.wikipedia.org/wiki/%EB%8C%80%ED%95%9C%EB%AF%BC%EA%B5%AD%EC%9D%98_%EC%BD%94%EB%A1%9C%EB%82%98%EB%B0%94%EC%9D%B4%EB%9F%AC%EC%8A%A4%EA%B0%90%EC%97%BC%EC%A6%9D-19_%EC%9C%A0%ED%96%89">일별 데이터 상세보기
-                          </a>
-                        </div>
-                      </div>
-                    </div>
-                    <!-- Card Body -->
-                    <div style="height:25rem;" class="card-body">
-                      <canvas id="myAreaChart_four"></canvas>
-                    </div>
-                  </div>
-                </div>
-                <!-- //한국 확진자 추이 분석 -->
 
                 <!-- 통계치 -->
                 <div class="col-xl-12 col-lg-6">
@@ -806,6 +790,33 @@
                   </div>
                 </div>
                 <!-- //제주 최신 정보(최근 중국인 이동 경로) -->
+
+                <!-- 중국관광객 제주 입도 현황(2월 4일 무사증 중단) -->
+                <div class="col-xl-12 col-lg-12">
+                  <div class="card shadow mb-4">
+                    <!-- Card Header - Dropdown -->
+                    <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                      <h6 class="m-0 font-weight-bold text-danger">중국관광객 제주 입도 현황(2월 4일 무사증 중단)</h6>
+                      <div class="dropdown no-arrow">
+                        <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink">
+                          <div class="dropdown-header">상세</div>
+                          <a class="dropdown-item" href="http://www.cdc.go.kr/contents.es?mid=a21111060000">상세내용</a>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- Card Body -->
+                    <div class="card-body">
+                      <div class="chart-area">
+                        <canvas id="myAreaChart_two"></canvas>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- //중국관광객 제주 입도 현황(2월 4일 무사증 중단) -->
+
                 <!-- 중국인 일일 입도 현황 -->
                 <div class="col-xl-12 col-lg-12">
                   <div class="card shadow mb-4">
@@ -833,6 +844,7 @@
                   </div>
                 </div>
                 <!-- //중국인 일일 입도 현황 -->
+
               </div>
             </div>
             <div class="col-xl-6 col-lg-12">
