--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                 <!-- Card Body -->
                 <div style="height:38.2rem;" class="card-body">
                   <canvas id="myAreaChart_four"></canvas>
-                  <p style="margin-left: 2rem; margin-top: -1.2rem;">현재 치명율 : <span id="치명율"></span>%</p>
+                  <p style="margin-left: 2rem; margin-top: -1.2rem;">현재(<span id="치명율_날짜"></span>) 치명율 : <span id="치명율"></span>%</p>
                 </div>
               </div>
             </div>
@@ -1414,7 +1414,9 @@
   </script>
 
   <script>
-    document.getElementById("치명율").innerHTML = ((분석차트_한국누적확진자[분석차트_한국누적확진자.length-1][3]/분석차트_한국누적확진자[분석차트_한국누적확진자.length-1][1])* 100).toFixed(2)
+    document.getElementById("치명율").innerHTML = ((분석차트_한국누적확진자[분석차트_한국누적확진자.length-1][3]/분석차트_한국누적확진자[분석차트_한국누적확진자.length-1][1])* 100).toFixed(2);
+
+    document.getElementById("치명율_날짜").innerHTML = 분석차트_한국누적확진자[분석차트_한국누적확진자.length-1][0];
 
   </script>
 
