전세계 확진자수 증가추이 그래프 높이 수정 모바일 버젼 헤더 바 z-index 수정

--- a/index.html
+++ b/index.html
@@ -324,11 +324,9 @@
               </div>
             </div>
             <!-- //국내 확진자 누적 현황 -->
-
           </div>
 
           <div class="row">
-
             <!-- 확진자수 증가추이 -->
             <div class="col-xl-5 col-lg-12">
               <div class="card shadow mb-4">
@@ -346,8 +344,8 @@
                   </div>
                 </div>
                 <!-- Card Body -->
-                <div style="height:22.9rem;" class="card-body">
-                  <div class="chart-area">
+                <div class="card-body">
+                  <div class="chart-area" style="height:200px">
                     <canvas id="myAreaChart"></canvas>
                   </div>
                 </div>
@@ -396,7 +394,7 @@
                   </div>
                 </div>
                 <!-- Card Body -->
-                <div style="height:22.9rem;" class="card-body" id="Top5">
+                <div class="card-body" id="Top5">
                   <h4 class="small font-weight-bold">
                     <span class="float-right"></span>
                   </h4>
