--- a/index.html
+++ b/index.html
@@ -1488,9 +1488,9 @@
       return "";
     }
 
-    function setCookie(name, value, expiryDays) {
+    function setCookie(name, value, expiryHours) {
       var d = new Date();
-      d.setTime(d.getTime() + (expiryDays * 24 * 60 * 60 * 1000));
+      d.setTime(d.getTime() + (expiryHours * 60 * 60 * 1000));
       var expires = "expires=" + d.toUTCString();
       document.cookie = name + "=" + value + ";" + expires + ";path=/";
     }
@@ -1503,7 +1503,8 @@
     }
 
     $("#btnAlertBannerClose").click(function() {
-      setCookie("alertBannerClosed", bannerCount, 1);
+      // 맨 마지막 옵션인 "시간"만 변경하세요. 단위가 day -> hour로 변경되었습니다.
+      setCookie("alertBannerClosed", bannerCount, 12);
     });
 
     // 배너를 숨기고 싶으면 아래 코드를 주석처리하세요
