--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                 </div>
                 <!-- Card Body -->
                 <div class="card-body">
-                  <div class="chart-area" style="height:200px">
+                  <div class="chart-area" style="height:23rem;">
                     <canvas id="myAreaChart"></canvas>
                   </div>
                 </div>
