--- a/index.html
+++ b/index.html
@@ -598,8 +598,11 @@
                         </div>
                       </div>
                     </div>
+
                     <div class="card-body">
                       <div class="accordion" id="accordionExample">
+
+                        <!-- 확진자 News 1 -->
                         <div class="card">
                           <div class="card-header" id="headingOne">
                             <h2 class="mb-0 cases-title">
@@ -632,6 +635,9 @@
                             </div>
                           </div>
                         </div>
+                        <!-- //확진자 News 1 -->
+
+                        <!-- 확진자 News 2 -->
                         <div class="card">
                           <div class="card-header" id="headingTwo">
                             <h2 class="mb-0 cases-title">
@@ -692,38 +698,9 @@
                             </div>
                           </div>
                         </div>
-                        <div class="card">
-                          <div class="card-header" id="headingThree">
-                            <h2 class="mb-0 cases-title">
-                              <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
-                                이스라엘 성시순례 다녀온 도민 확인, 모니터링 착수
-                              </button>
-                            </h2>
-                          </div>
-                          <div id="collapseThree" class="collapse hide" aria-labelledby="headingOne" data-parent="#accordionExample">
-                            <div class="card-body">
-                              <ul>
-                                <li>제주특별자치도가 22일 이스라엘 성지순례를 다녀온 제주도민을 확인하고 모니터링에 착수했다.</li>
-                                <li>도는 경북북부권 천주교 신도 이스라엘 성지순례단 참가자 일부가 코로나19 확진 판정을 받음에 따라 제주도민 참가 여부를 파악하다가 이 사실을 확인했다고 밝혔다.
-                                  <ul>
-                                    <li>종교계 관계자에 따르면, 이스라엘 성지순례에 참가한 도민은 총 37명이며, 지난 11일부터 21일까지 10박11일 일정으로 현지를 방문했다.</li>
-                                  </ul>
-                                </li>
-                                <li>이들은 코로나19 확진자들이 일부 확인된 경북북부권 성지순례단과 별도로 이스라엘을 방문한 것으로 확인됐다.
-                                  <ul>
-                                    <li>경북북부권 성지순례단에는 도민이 포함되지 않는 것으로 조사됐다.</li>
-                                  </ul>
-                                </li>
-                                <li>이들 중 1명은 기침 증상을 보여 22일 제주대학교병원에서 코로라19 진단 검사를 받았다. 결과는 내일(23일) 나오는 것으로 알려졌다.</li>
-                                <li>또 다른 1명은 증상은 없으나 23일 한라병원에 코로나19 진단검사를 예약한 것으로 확인됐다.</li>
-                                <li>성지순례 도민 참가자 모두는 현재 성당 측의 권고에 따라 자택 자가 격리 조치하고 있는 것으로 파악됐다.</li>
-                                <li>도는 통상적 잠복기(14일)가 끝날 때까지 이들을 지속 모니터링하는 한편, 재난대책본부 차원에서 적극 대응해 나갈 방침이다.</li>
-                                <li>또 도는 도내 종교시설에서 확진자가 발생하지 않도록 관리에 철저를 기할 것을 당부하는 한편, 자가 격리자들에게는 자가격리 중 개인수칙 철저하게 준수해달라고 권고할 방침이다.</li>
-                              </ul>
-                              <div class="source"><span class="title">출처</span><span class="desc"><a href="http://www.jeju.go.kr/wel/healthCare/corona/coronaNotice.htm?act=view&seq=1233486">제주특별자치도</a></span></div>
-                            </div>
-                          </div>
-                        </div>
+                        <!-- //확진자 News 2 -->
+
+                        <!-- 제주도 News 1 -->
                         <div class="card">
                           <div class="card-header" id="headingFour">
                             <h2 class="mb-0 cases-title">
@@ -744,6 +721,8 @@
                             </div>
                           </div>
                         </div>
+                        <!-- //제주도 News 1 -->
+                        
                       </div>
 
                     </div>
