--- a/index.html
+++ b/index.html
@@ -81,6 +81,12 @@
                   <a href="#casesStatus"><i class="fas fa-caret-right"></i> 확진자 현황</a>
                 </li>
                 <li class="nav-item">
+                  <a href="#koreaCasesStatus"><i class="fas fa-caret-right"></i> 한국 현황</a>
+                </li>
+                <li class="nav-item">
+                  <a href="#worldCasesStatus"><i class="fas fa-caret-right"></i> 세계 현황</a>
+                </li>
+                <li class="nav-item">
                   <a href="#safetyRule"><i class="fas fa-caret-right"></i> 안전수칙, 팩트체크 및 소상공인 지원사업</a>
                 </li>
                 <li class="nav-item">
@@ -98,6 +104,12 @@
         <ul>
           <li>
             <a href="#casesStatus"><i class="fas fa-caret-right"></i> 확진자 현황</a>
+          </li>
+          <li>
+            <a href="#koreaCasesStatus"><i class="fas fa-caret-right"></i> 한국 현황</a>
+          </li>
+          <li>
+            <a href="#worldCasesStatus"><i class="fas fa-caret-right"></i> 세계 현황</a>
           </li>
           <li>
             <a href="#safetyRule"><i class="fas fa-caret-right"></i> 안전수칙, 팩트체크 및 소상공인 지원사업</a>
@@ -238,6 +250,8 @@
             <!-- //제주현황 -->
           </div>
 
+          <div class="anchor" id="koreaCasesStatus"></div>
+
           <div class="row">
 
             <!-- 한국 확진자 추이 분석 -->
@@ -292,6 +306,8 @@
             </div>
             <!-- //국내 확진자 누적 현황 -->
           </div>
+
+          <div class="anchor" id="worldCasesStatus"></div>
 
           <div class="row">
             <!-- 확진자수 증가추이 -->
@@ -722,7 +738,7 @@
                           </div>
                         </div>
                         <!-- //제주도 News 1 -->
-                        
+
                       </div>
 
                     </div>
