marker.js rename totalDataSet.js

--- a/index.html
+++ b/index.html
@@ -1282,6 +1282,9 @@
                   <div class="card-body">
                     <ul>
                       <li>
+                        크롬에 최적화 되어 있습니다.
+                      </li>
+                      <li>
                         <a href="http://www.cdc.go.kr/linkCheck.es?mid=a21111050500" target="_blank">질병관리본부</a>,
                         <a href="http://news.kbs.co.kr/common/main.html" target="_blank">KBS</a>, 및 <a href="http://www.jeju.go.kr/wel/healthCare/corona/coronaNotice.htm">제주도청</a>의 데이터를 근거하여 매일 업데이트합니다.
                       </li>
@@ -1331,7 +1334,7 @@
     <i class="fas fa-angle-up"></i>
   </a>
 
-  <script src="marker.js"></script>
+  <script src="totalDataSet.js"></script>
   <script>
     var data = marker;
 
